--- a/omnibase_description/CMakeLists.txt
+++ b/omnibase_description/CMakeLists.txt
@@ -1,4 +1,17 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(omnibase_description)
 
-find_package(catkin REQUIRED)
+find_package(catkin_simple REQUIRED COMPONENTS
+	gazebo
+	rospy
+	roscpp
+	rviz
+	urdf
+	geometry_msgs
+)
+
+catkin_simple(ALL_DEPS_REQUIRED)
+
+
+cs_install()
+cs_export()
