--- a/omnibase_gazebo/package.xml
+++ b/omnibase_gazebo/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="hardesh1deshpande@gmail.com">harshal deshpande</maintainer>
 
-  <license>ERC</license>
+  <license>BSD</license>
 
   <!-- <url type="website">http://wiki.ros.org/omnibase_control</url> -->
   <author email="hardesh1deshpande@gmail.com">Jane Doe</author>
