--- a/omnibase_simulator/package.xml
+++ b/omnibase_simulator/package.xml
@@ -7,7 +7,7 @@
 
   <author>Harshal Deshpande</author>
 
-  <license>ERC</license>
+  <license>BSD</license>
 
   <!-- <url type="website">https://github.com/ethz-asl/rotors_simulator</url> -->
 
