Added coeff of restitution

--- a/omnibase_control/config/controllers.yaml
+++ b/omnibase_control/config/controllers.yaml
@@ -6,22 +6,22 @@ omnibase:
 
     front_right_joint_velocity_controller:
         type: velocity_controllers/JointVelocityController
-        joint: rim_front_right_joint
+        joint: front_left_wheel
         pid: {p: 100.0, i: 0.01, d: 10.0}
 
     front_left_joint_velocity_controller:
         type: velocity_controllers/JointVelocityController
-        joint: rim_front_left_joint
+        joint: front_right_wheel
         pid: {p: 100.0, i: 0.01, d: 10.0}
 
     back_right_joint_velocity_controller:
         type: velocity_controllers/JointVelocityController
-        joint: rim_back_right_joint
+        joint: back_left_wheel
         pid: {p: 100.0, i: 0.01, d: 10.0}
 
     back_left_joint_velocity_controller:
         type: velocity_controllers/JointVelocityController
-        joint: rim_back_left_joint
+        joint: back_right_wheel
         pid: {p: 100.0, i: 0.01, d: 10.0}
 
 # /omnibase/gazebo_ros_control/pid_gains:
