--- a/omnibase_control/config/controllers.yaml
+++ b/omnibase_control/config/controllers.yaml
@@ -24,20 +24,21 @@ omnibase:
         joint: back_right_wheel
         pid: {p: 100.0, i: 0.01, d: 10.0}
 
-# /omnibase/gazebo_ros_control/pid_gains:
-#     rim_front_left_joint:
-#         p: 1.001
-#         i: 0.00
-#         d: 0.00
-#     rim_back_left_joint:
-#         p: 1.001
-#         i: 0.00
-#         d: 0.00
-#     rim_front_right_joint:
-#         p: 1.001
-#         i: 0.00
-#         d: 0.00
-#     rim_back_right_joint:
-#         p: 1.001
-#         i: 0.00
-#         d: 0.00
+/omnibase/gazebo_ros_control:
+    pid_gains:
+        front_left_wheel:
+            p: 1.001
+            i: 0.00
+            d: 0.00
+        front_right_wheel:
+            p: 1.001
+            i: 0.00
+            d: 0.00
+        back_left_wheel:
+            p: 1.001
+            i: 0.00
+            d: 0.00
+        back_right_wheel:
+            p: 1.001
+            i: 0.00
+            d: 0.00
