--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ install:
   - source devel/setup.bash
   # Add the package under integration to the workspace using a symlink.
   - cd ~/catkin_ws/src
-  - ls -s $CI_SOURCE_PATH .
+  - ln -s $CI_SOURCE_PATH .
 
 # Install all dependencies, using wstool first and rosdep second.
 # wstool looks for a ROSINSTALL_FILE defined in the environment variables.
@@ -73,7 +73,7 @@ before_script:
   # source dependencies: install using wstool.
   - cd ~/catkin_ws/src
   - wstool init
-  - wstool merge omnibase/omnibase_https.rosinstall
+  - if [[ -f $ROSINSTALL_FILE ]] ; then wstool merge $ROSINSTALL_FILE ; fi
   - wstool update
   # package depdencies: install using rosdep.
   - cd ~/catkin_ws
