--- a/omnibase_description/CMakeLists.txt
+++ b/omnibase_description/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(omnibase_description)
 
-find_package(catkin_simple REQUIRED COMPONENTS
-	gazebo
+find_package(catkin REQUIRED COMPONENTS
 	rospy
 	roscpp
 	rviz
@@ -10,8 +9,8 @@ find_package(catkin_simple REQUIRED COMPONENTS
 	geometry_msgs
 )
 
-catkin_simple(ALL_DEPS_REQUIRED)
+# catkin_simple(ALL_DEPS_REQUIRED)
 
 
-cs_install()
-cs_export()
+# cs_install()
+# cs_export()
