--- a/omnibase_description/package.xml
+++ b/omnibase_description/package.xml
@@ -7,12 +7,16 @@
 
 	<license>BSD</license>
 
+	<url type="website">https://erc-bpgc.github.io/omnibase/</url>
 	<maintainer email="hardesh1deshpande@gmail.com">Harshal Deshpande</maintainer>
+	<maintainer email="mihirk284@gmail.com">Mihir Kulkarni</maintainer>
 
 	<author>Harshal Deshpande</author>
+	<author email="mihirk284@gmail.com">Mihir Kulkarni</author>
+
 
 	<buildtool_depend>catkin</buildtool_depend>
-	<buildtool_depend>catkin_simple</buildtool_depend>
+	<!-- <buildtool_depend>catkin_simple</buildtool_depend> -->
 
 	<depend>geometry_msgs</depend>
 	<depend>rospy</depend>
