--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ lang: en-US
 baseurl: "/omnibase" # the subpath of your site, e.g. /blog/
 url: https://erc-bpgc.github.io/omnibase # the base hostname & protocol for your site
 git_address: https://github.com/ERC-BPGC/omnibase
-git_edit_address: https://github.com/ERC-BPGC/omnibase/blob/gh-pages
+git_edit_address: https://github.com/ERC-BPGC/omnibase/
 
 # theme options from https://bootswatch.com/3/
 # comment out this to use default Bootstrap
