--- a/docs/_data/docs.yml
+++ b/docs/_data/docs.yml
@@ -5,8 +5,9 @@
   - usage
 
 
-# - title: Examples
-#   docs:
+- title: Examples
+  docs:
+    - velocity
 #   - cheatsheet
 #   - font-awesome
 #   - bootstrap
