--- a/omnibase_description/package.xml
+++ b/omnibase_description/package.xml
@@ -11,7 +11,7 @@
 	<maintainer email="hardesh1deshpande@gmail.com">Harshal Deshpande</maintainer>
 	<maintainer email="mihirk284@gmail.com">Mihir Kulkarni</maintainer>
 
-	<author>Harshal Deshpande</author>
+	<author email="hardesh1deshpande@gmail.com">Harshal Deshpande</author>
 	<author email="mihirk284@gmail.com">Mihir Kulkarni</author>
 
 
