--- a/omnibase_gazebo/package.xml
+++ b/omnibase_gazebo/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.2</version>
   <description>The omnibase_gazebo package</description>
 
-  <maintainer email="hardesh1deshpande@gmail.com">harshal deshpande</maintainer>
+  <maintainer email="hardesh1deshpande@gmail.com">Harshal Heshpande</maintainer>
   <maintainer email="mihirk284@gmail.com">Mihir Kulkarni</maintainer>
 
   <license>BSD</license>
