--- a/omnibase_simulator/package.xml
+++ b/omnibase_simulator/package.xml
@@ -6,7 +6,7 @@
   <maintainer email="hardesh1deshpande@gmail.com">Harshal Deshpande</maintainer>
   <maintainer email="mihirk284@gmail.com">Mihir Kulkarni</maintainer>
 
-  <author>Harshal Deshpande</author>
+  <author email="hardesh1deshpande@gmail.com">Harshal Deshpande</author>
   <author email="mihirk284@gmail.com">Mihir Kulkarni</author>
 
   <license>BSD</license>
