--- a/omnibase_control/package.xml
+++ b/omnibase_control/package.xml
@@ -34,7 +34,7 @@
 
   <depend>joint_state_controller</depend>
   <depend>joint_trajectory_controller</depend>
-  <depend>effort_controller</depend>
+  <depend>effort_controllers</depend>
   <depend>position_controllers</depend>
   <depend>velocity_controllers</depend>
 
