--- a/omnibase_control/package.xml
+++ b/omnibase_control/package.xml
@@ -38,6 +38,8 @@
   <depend>position_controllers</depend>
   <depend>velocity_controllers</depend>
 
+  <depend>tf2_ros</depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
